--- a/index.html
+++ b/index.html
@@ -1,1 +1,127 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Play Store Community</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+<body>
+    <div class="header">
+        <div class="search-bar">
+            <i class="material-icons">menu</i>
+            <div class="search-input">
+                <i class="material-icons">search</i>
+                <input type="text" placeholder="Search in Google Play">
+            </div>
+            <i class="material-icons">mic</i>
+            <i class="material-icons profile-icon">account_circle</i>
+        </div>
+        <div class="nav-tabs">
+            <div class="tab active">Games</div>
+            <div class="tab">Apps</div>
+            <div class="tab">Movies & TV</div>
+            <div class="tab">Books</div>
+        </div>
+    </div>
 
+    <div class="notification-container">
+        <div class="notification">
+            <div class="notification-header">
+                <img src="company-logo.png" alt="Company Logo" class="company-logo">
+                <div class="notification-title">Job Offer</div>
+                <div class="notification-time">Now</div>
+            </div>
+            <div class="notification-content">
+                <h3>Job Offer for Mukul Singh Rathore</h3>
+                <p>We are pleased to offer you a position as Backend Junior Engineer.</p>
+                <div class="job-details">
+                    <div class="detail">
+                        <span class="material-icons">work</span>
+                        <span>Backend Junior Engineer</span>
+                    </div>
+                    <div class="detail">
+                        <span class="material-icons">attach_money</span>
+                        <span>$24,000 per year</span>
+                    </div>
+                    <div class="detail">
+                        <span class="material-icons">location_on</span>
+                        <span>Remote / On-site</span>
+                    </div>
+                </div>
+                <div class="action-buttons">
+                    <button class="submit-resume">Submit Your Resume</button>
+                    <button class="dismiss">Later</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="app-categories">
+        <h2>Top Categories</h2>
+        <div class="category-list">
+            <div class="category">
+                <i class="material-icons">sports_esports</i>
+                <span>Gaming</span>
+            </div>
+            <div class="category">
+                <i class="material-icons">music_note</i>
+                <span>Music</span>
+            </div>
+            <div class="category">
+                <i class="material-icons">movie</i>
+                <span>Entertainment</span>
+            </div>
+            <div class="category">
+                <i class="material-icons">photo_camera</i>
+                <span>Photography</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="app-section">
+        <div class="section-header">
+            <h2>Popular Apps</h2>
+            <span class="see-more">See more</span>
+        </div>
+        <div class="app-list">
+            <div class="app-card">
+                <img src="app1.png" alt="App 1" class="app-icon">
+                <div class="app-info">
+                    <div class="app-name">Facebook</div>
+                    <div class="app-developer">Meta</div>
+                    <div class="app-rating">
+                        <span class="rating">4.5</span>
+                        <span class="material-icons star">star</span>
+                    </div>
+                </div>
+            </div>
+            <div class="app-card">
+                <img src="app2.png" alt="App 2" class="app-icon">
+                <div class="app-info">
+                    <div class="app-name">Instagram</div>
+                    <div class="app-developer">Meta</div>
+                    <div class="app-rating">
+                        <span class="rating">4.3</span>
+                        <span class="material-icons star">star</span>
+                    </div>
+                </div>
+            </div>
+            <div class="app-card">
+                <img src="app3.png" alt="App 3" class="app-icon">
+                <div class="app-info">
+                    <div class="app-name">WhatsApp</div>
+                    <div class="app-developer">Meta</div>
+                    <div class="app-rating">
+                        <span class="rating">4.7</span>
+                        <span class="material-icons star">star</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
